--- a/Kurs1125/MainWindow.xaml
+++ b/Kurs1125/MainWindow.xaml
@@ -5,27 +5,25 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Kurs1125"
         mc:Ignorable="d"
-        Title="Диспетчер Такси" d:Width="500" d:Height="400" WindowStartupLocation="CenterScreen" Width="492" Background="#FFEEC798">
+        Title="Диспетчер Такси" d:Width="500" d:Height="400" WindowStartupLocation="CenterScreen" Width="392" Background="#FFEEC798" Height="279">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="AUto"/>
-            <ColumnDefinition Width="AUto"/>
-            <ColumnDefinition Width="AUto"/>
-        </Grid.ColumnDefinitions>
+
+        <TextBlock Width="40" Text=""/>
+        <TextBlock Margin="264,165,157,163" Grid.Row="1" ><Run Language="ru-ru" Text="Справочники"/></TextBlock>
+        <Button Margin="264,72,20,249" Grid.Row="1">Архив</Button>
+        <Button Margin="264,23,20,299" Grid.Row="1" Content="Диспетчеркая" Click="Button_Click_2"/>
+        <Button Margin="264,124,20,197" Grid.Row="1" Content="Учет"/>
+        <Button Margin="264,193,181,144" Grid.Row="1" Content="Авто"/>
+        <Button Margin="264,217,181,120" Grid.Row="1" Content="Районы" Click="Button_Click_6"/>
+        <Button Margin="324,193,113,144" Grid.Row="1" Content="Улицы"/>
+        <Button Margin="324,217,113,120" Grid.Row="1" Content="Водители"/>
+        <Button Margin="292,252,44,73" Grid.Row="1" Content="Выход"/>
         <Grid.RowDefinitions>
             <RowDefinition Height="28" MinHeight="10"/>
             <RowDefinition />
         </Grid.RowDefinitions>
-        <Button Margin="58,5,288,5" Grid.Column="1">Водители</Button>
-        <Button  Grid.Column="1" Margin="137,5,200,5">
-            <Run Text="Клиенты"/>
-        </Button>
-        <Button Margin="10,5,364,5"
-                Grid.Column="1" Click="Button_Click_2">
-            <Run Text="Заказы"/>
-        </Button>
-        
-        
+
+
     </Grid>
-    
+
 </Window>
