--- a/Kurs1125/MainWindow.xaml
+++ b/Kurs1125/MainWindow.xaml
@@ -13,11 +13,11 @@
         <Button Margin="264,72,20,249" Grid.Row="1">Архив</Button>
         <Button Margin="264,23,20,299" Grid.Row="1" Content="Диспетчеркая" Click="Button_Click_2"/>
         <Button Margin="264,124,20,197" Grid.Row="1" Content="Учет"/>
-        <Button Margin="264,193,181,144" Grid.Row="1" Content="Авто"/>
+        <Button Margin="264,193,181,144" Grid.Row="1" Content="Авто" Click="Button_Click_7"/>
         <Button Margin="264,217,181,120" Grid.Row="1" Content="Районы" Click="Button_Click_6"/>
         <Button Margin="324,193,113,144" Grid.Row="1" Content="Улицы"/>
         <Button Margin="324,217,113,120" Grid.Row="1" Content="Водители"/>
-        <Button Margin="292,252,44,73" Grid.Row="1" Content="Выход"/>
+        <Button Margin="292,252,44,73" Grid.Row="1" Content="Выходsbsd"/>
         <Grid.RowDefinitions>
             <RowDefinition Height="28" MinHeight="10"/>
             <RowDefinition />
