--- a/Kurs1125/pages/EditZakaziPage.xaml
+++ b/Kurs1125/pages/EditZakaziPage.xaml
@@ -8,15 +8,29 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="EditZakaziPage">
 
-    <Grid>
-        <Button Height="20" Grid.RowSpan="2" VerticalAlignment="Top">Архив</Button>
+    <Grid Background="#FF6E6B6B">
+        <DataGrid ItemsSource="{Binding Items}" Margin="286,10,0,0" Grid.Row="2" Background="White"  >
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Время получения" Width="110"/>
+                <DataGridTextColumn Header="Время назначения"/>
+                <DataGridTextColumn Header="Место отправления"/>
+                <DataGridTextColumn Header="Место Назначения"/>
+                <DataGridTextColumn Header="Статус"/>
+            </DataGrid.Columns>
+        </DataGrid>
+
+
+
+
+        <Button Height="20" VerticalAlignment="Center" Margin="0,0,698,0" Grid.Row="1" Content="Заказы"/>
+        <Button Height="20" VerticalAlignment="Center" Margin="107,0,591,0" Grid.Row="1" Content="Удалить заказ"/>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="29*" />
             <RowDefinition Height="421*"/>
         </Grid.RowDefinitions>
-        
 
-        <Frame Content="{Binding CurrentPage}" Grid.Row="1" NavigationUIVisibility="Hidden" Foreground="#FFF5E6E6" BorderBrush="White" OpacityMask="#FFF9F9F9" Background="White" Grid.RowSpan="2"/>
+
+
     </Grid>
 </Page>
