--- a/Kurs1125/pages/ViewZakaziPage.xaml
+++ b/Kurs1125/pages/ViewZakaziPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Kurs1125.pages.EditZakaziPage"
+﻿<Page x:Class="Kurs1125.pages.ViewZakaziPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,10 +6,10 @@
       xmlns:local="clr-namespace:Kurs1125.pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="EditZakaziPage">
+      Title="ViewZakaziPage">
 
-    <Grid Background="#FF6E6B6B">
-        <DataGrid ItemsSource="{Binding Items}" Margin="286,10,0,0" Grid.Row="2" Background="White"  >
+    <Grid Background="#FFEEC798">
+        <DataGrid ItemsSource="{Binding Items}" Margin="286,10,0,0" Grid.Row="2" Background="#FFECD4AB" BorderBrush="Black" Foreground="Black"  >
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Время получения" Width="110"/>
                 <DataGridTextColumn Header="Время назначения"/>
