--- a/Kurs1125/MainWindow.xaml
+++ b/Kurs1125/MainWindow.xaml
@@ -14,14 +14,14 @@
         </Grid.ColumnDefinitions>
         <TextBlock Margin="21,152,148,212" Grid.Column="1" ><Run Language="ru-ru" Text="Справочники"/></TextBlock>
         <Button Grid.Column="1" Margin="21,66,10,283">Архив</Button>
-        <Button Content="Диспетчеркая" Click="Button_Click_2" Margin="21,24,10,323" Grid.Column="1"/>
+        <Button Content="Диспетчеркая" Click="Button_Click_1" Margin="21,24,10,323" Grid.Column="1"/>
         <Button Content="Учет" Margin="21,106,10,245" Grid.Column="1"/>
-        <Button Content="Авто" Click="Button_Click_7" Grid.Column="1" Margin="10,172,182,192"/>
-        <Button Content="Районы" Click="Button_Click_6" Margin="75,171,120,192" Grid.Column="1"/>
+        <Button Content="Авто" Grid.Column="1" Margin="10,172,182,192"/>
+        <Button Content="Районы" Margin="75,171,120,192" Grid.Column="1"/>
         <Button Content="Улицы" Margin="75,196,120,169" Grid.Column="1"/>
-        <Button Content="Водители" Margin="10,196,182,169" Grid.Column="1">
+        <Button Content="Водители" Click="Button_Click_2" Margin="10,196,182,169" Grid.Column="1">
         </Button>
-        <Button Content="Выход" Grid.Column="1" Margin="21,327,39,20"/>
+        <Button Content="Выход" Click="Button_Click_3" Grid.Column="1" Margin="21,327,39,20"/>
 
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
