--- a/Kurs1125/pages/EditZakaziPagePage.xaml
+++ b/Kurs1125/pages/EditZakaziPagePage.xaml
@@ -14,12 +14,17 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Button Content="Сохранить" Command="{Binding SavePrepods}" Background="#FFF1ED94" Margin="70,413,70,0" Grid.Row="1"/>
-        
-        <TextBox Text="{Binding LName}" RenderTransformOrigin="-0.14,0.517" Height="20" Margin="53,20,233,410" Grid.RowSpan="2"/>
-        <TextBox Text="{Binding LName}" RenderTransformOrigin="-0.14,0.517" Height="20" Margin="132,20,154,410" Grid.RowSpan="2"/>
-        <TextBox Text="{Binding LName}" RenderTransformOrigin="-0.14,0.517" Height="20" Margin="53,73,154,357" Grid.RowSpan="2"/>
-        <TextBox Text="{Binding LName}" RenderTransformOrigin="-0.14,0.517" Height="20" Margin="53,110,154,320" Grid.RowSpan="2"/>
-        <TextBox Text="{Binding LName}" RenderTransformOrigin="-0.14,0.517" Height="20" Margin="53,148,207,282" Grid.RowSpan="2"/>
+        <TextBlock Margin="0,20,246,410" Grid.RowSpan="2" ><Run Language="ru-ru" Text="Заявка поступила"/></TextBlock>
+        <TextBlock Margin="0,73,276,357" Grid.RowSpan="2" ><Run Text="Адрес"/><Run Text=" "/><Run Language="ru-ru" Text="заявки"/></TextBlock>
+        <TextBox Text="{Binding LName}" RenderTransformOrigin="-0.14,0.517" Height="20" Margin="103,20,175,410" Grid.RowSpan="2"/>
+        <TextBox Text="{Binding LName}" RenderTransformOrigin="-0.14,0.517" Height="20" Margin="180,20,98,410" Grid.RowSpan="2"/>
+        <TextBox Text="{Binding LName}" RenderTransformOrigin="-0.14,0.517" Height="20" Margin="92,73,78,357" Grid.RowSpan="2"/>
+        <TextBox Text="{Binding LName}" RenderTransformOrigin="-0.14,0.517" Height="20" Margin="93,108,78,322" Grid.RowSpan="2"/>
+        <TextBox Text="{Binding LName}" RenderTransformOrigin="-0.14,0.517" Height="20" Margin="160,148,78,282" Grid.RowSpan="2"/>
+        <TextBlock Margin="0,108,262,322" Grid.RowSpan="2" ><Run Text="Адрес"/><Run Text=" д"/><Run Text="оставки"/></TextBlock>
+        <TextBlock Margin="3,148,206,282" Grid.RowSpan="2" ><Run Language="ru-ru" Text="Номер телефона клиента"/></TextBlock>
+        <TextBox Text="{Binding LName}" RenderTransformOrigin="-0.14,0.517" Height="20" Margin="83,192,155,238" Grid.RowSpan="2"/>
+        <TextBlock Margin="3,192,282,238" Grid.RowSpan="2" ><Run Language="ru-ru" Text="Стоимость"/></TextBlock>
 
 
 
