--- a/Kurs1125/MainWindow.xaml
+++ b/Kurs1125/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Kurs1125"
         mc:Ignorable="d"
-        Title="Диспетчер Такси" d:Width="500" d:Height="400" WindowStartupLocation="CenterScreen" Background="#FFEEC798">
+        Title="Диспетчер Такси" d:Width="500" d:Height="400" MaxHeight="420" MaxWidth="400" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" Background="#FFEEC798">
 
     <Grid>
         <Grid.ColumnDefinitions>
