--- a/Kurs1125/pages/EditVoditel.xaml
+++ b/Kurs1125/pages/EditVoditel.xaml
@@ -4,9 +4,8 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Kurs1125.pages"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="350"
-      Title="Добавление Водителя">
+      mc:Ignorable="d" MaxHeight="900" MaxWidth="450" ResizeMode="NoResize"
+      Title="Добавление Водителя" Height="488" Width="372">
 
     <Grid Background="#FFF5C68E">
         <Grid.RowDefinitions>
