--- a/Kurs1125/pages/ViewZakazi.xaml
+++ b/Kurs1125/pages/ViewZakazi.xaml
@@ -4,22 +4,21 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Kurs1125.pages"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="Диспетчерская">
+      mc:Ignorable="d" MaxHeight="400" MaxWidth="7000" ResizeMode="NoResize"
+      Title="Диспетчерская" Height="400" Width="781">
 
-    <Grid Background="#FFEEC798">
+    <Grid Background="#FFEEC798" Margin="0,0,1,-6">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto" MinWidth="779.362"/>
             <ColumnDefinition Width="auto" MinWidth="0"/>
             <ColumnDefinition Width="auto" MinWidth="8.351"/>
         </Grid.ColumnDefinitions>
-        <DataGrid ItemsSource="{Binding Items}" Margin="298,0,-12,-410" Grid.Row="2" Background="#FFECD4AB" BorderBrush="Black" Foreground="Black" Grid.ColumnSpan="3" RenderTransformOrigin="0.5,0.5"  >
+        <DataGrid ItemsSource="{Binding Items}" Margin="233,13,42,-323" Grid.Row="2" Background="#FFECD4AB" BorderBrush="Black" Foreground="Black" RenderTransformOrigin="0.5,0.5"  >
             <DataGrid.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
                     <SkewTransform AngleY="-0.227"/>
-                    <RotateTransform/>
+                    <RotateTransform Angle="0.181"/>
                     <TranslateTransform Y="-0.996"/>
                 </TransformGroup>
             </DataGrid.RenderTransform>
@@ -38,7 +37,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto" MinHeight="20" />
-            <RowDefinition Height="Auto" MinHeight="0"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
 
