--- a/Kurs1125/Auth.xaml
+++ b/Kurs1125/Auth.xaml
@@ -132,15 +132,15 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.6*"/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="129*"/>
+            <ColumnDefinition Width="167*"/>
+            <ColumnDefinition Width="298*"/>
+            <ColumnDefinition Width="178*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Text="User Name:" />
-        <TextBlock Grid.Row="1" Text="Password:" />
-        <TextBox Grid.Column="1" Grid.ColumnSpan="3"/>
-        <TextBox Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="3" />
-        <Button Grid.Column="1" Grid.Row="3" Content="Log in" Style="{StaticResource btnLogIn}" Margin="182,21,97,20" Grid.ColumnSpan="2"/>
+        <TextBlock Text="User Name:" Height="19" Margin="10,0,10,0" />
+        <TextBlock Grid.Row="1" Text="Password:" Height="19" Margin="10,0,10,0" />
+        <TextBox Grid.Column="1" Grid.ColumnSpan="3" Margin="5,5,5,5"/>
+        <TextBox Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="3" Margin="5,5,5,5" />
+        <Button Grid.Column="2" Grid.Row="3" Content="Log in" Style="{StaticResource btnLogIn}" Margin="30,21,118,20"/>
     </Grid>
 </Window>
