--- a/Kurs1125/pages/EditZakazi.xaml
+++ b/Kurs1125/pages/EditZakazi.xaml
@@ -17,7 +17,7 @@
         </Grid.RowDefinitions>
         <DatePicker x:Name="datePicker"
               SelectedDate="01/01/22"
-              SelectedDateFormat="Long" Margin="243,16,16,397" Grid.Row="1"/>
+              SelectedDateFormat="Long" Margin="220,18,41,395" Grid.Row="1"/>
 
         <Button Content="Сохранить" Command="{Binding SavePrepods}" Background="#FFF1ED94" Margin="70,376,70,37" Grid.Row="1"/>
         <TextBlock Margin="10,20,242,397" Grid.Row="1" ><Run Language="ru-ru" Text="Заявка поступила"/></TextBlock>
@@ -29,7 +29,8 @@
         <TextBox Text="{Binding LName}" RenderTransformOrigin="-0.14,0.517" Margin="83,193,155,219" Grid.Row="1"/>
         <TextBlock Margin="4,193,280,223" Grid.Row="1" ><Run Language="ru-ru" Text="Стоимость"/></TextBlock>
         <TextBlock Margin="10,107,266,313" Grid.Row="1" ><Run Text="Адрес"/><Run Text=" "/><Run Language="ru-ru" Text="доставки"/></TextBlock>
-        <Label x:Name="label" HorizontalAlignment="Left" Margin="135,20,0,0" Grid.Row="1" VerticalAlignment="Top" Width="69" Height="16"/>
+        <TextBlock Text="{Binding DateCreated, Mode=TwoWay, StringFormat=d}" Margin="123,16,155,397" Grid.Row="1" />
+        <TextBox Text="{Binding LName}" RenderTransformOrigin="-0.14,0.517" Margin="112,18,174,395" Grid.Row="1"/>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="auto"/>
