--- a/Kurs1125/Auth.xaml
+++ b/Kurs1125/Auth.xaml
@@ -1,146 +1,17 @@
-﻿<Window x:Class="Auth.MainWindow"
+﻿<Window x:Class="Kurs1125.Auth"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Auth"
+        xmlns:local="clr-namespace:Kurs1125"
         mc:Ignorable="d"
-        Title="Authentification" Height="248" Width="772" Background="#444444" ResizeMode="NoResize">
-    <Window.Resources>
-        <Style TargetType="TextBlock">
-            <Style.Setters>
-                <Setter Property="FontFamily" Value="Vardana"/>
-                <Setter Property="FontSize" Value="16"/>
-                <Setter Property="Foreground" Value="White"/>
-                <Setter Property="Margin" Value="10"/>
-                <Setter Property="VerticalAlignment" Value="Center"/>
-            </Style.Setters>
-        </Style>
-        <Style TargetType="TextBox">
-            <Style.Setters>
-                <Setter Property="FontFamily" Value="Vardana"/>
-                <Setter Property="FontSize" Value="16"/>
-                <Setter Property="Foreground" Value="White"/>
-                <Setter Property="Margin" Value="5"/>
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="{x:Type TextBoxBase}">
-                            <Border Name="Border" CornerRadius="10" Padding="10" BorderThickness="3">
-                                <ScrollViewer Margin="0" x:Name="PART_ContentHost"/>
-                                <Border.BorderBrush>
-                                    <SolidColorBrush Color="White"/>
-                                </Border.BorderBrush>
-                                <Border.Background>
-                                    <SolidColorBrush Color="#707070"/>
-                                </Border.Background>
-                            </Border>
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Style.Setters>
-        </Style>
-        <Style TargetType="Button" x:Key="btnLogIn">
-            <Setter Property="FontFamily" Value="Vardana"/>
-            <Setter Property="FontSize" Value="20"/>
-            <Setter Property="Foreground" Value="White"/>
-            <Setter Property="Margin" Value="10"/>
-            <Setter Property="FontWeight" Value="Bold"/>
-            <Setter Property="Width" Value="150"/>
-            <Setter Property="Background" Value="LimeGreen"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Button">
-                        <Grid>
-                            <Border CornerRadius="20"  BorderThickness="0" Background="{TemplateBinding Background}"/>
-                            <ContentPresenter Content="{TemplateBinding Content}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                        </Grid>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-            <Style.Triggers>
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" Value="#108510"/>
-                </Trigger>
-                <Trigger Property="IsPressed" Value="True">
-                    <Setter Property="Background" Value="#439A43"/>
-                </Trigger>
-            </Style.Triggers>
-        </Style>
-        <Style TargetType="Button" BasedOn="{StaticResource btnLogIn}">
-            <Style.Setters>
-                <Setter Property="Background" Value="Crimson"/>
-            </Style.Setters>
-            <Style.Triggers>
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" Value="#8F0621"/>
-                </Trigger>
-                <Trigger Property="IsPressed" Value="True">
-                    <Setter Property="Background" Value="#A5354B"/>
-                </Trigger>
-            </Style.Triggers>
-        </Style>
-
-        <Style TargetType="CheckBox">
-            <Style.Setters>
-                <Setter Property="Foreground" Value="White"/>
-                <Setter Property="FontSize" Value="16"/>
-                <Setter Property="FontFamily" Value="Verdana"/>
-                <Setter Property="Margin" Value="10"/>
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="CheckBox">
-                            <BulletDecorator>
-                                <BulletDecorator.Bullet>
-                                    <Grid>
-                                        <Border BorderThickness="1" CornerRadius="5" Height="18" Width="20">
-                                            <Border.BorderBrush>
-                                                <SolidColorBrush Color="White"/>
-                                            </Border.BorderBrush>
-                                            <Border.Background>
-                                                <SolidColorBrush Color="Transparent"/>
-                                            </Border.Background>
-                                            <Border.Effect>
-                                                <BlurEffect Radius="1"/>
-                                            </Border.Effect>
-                                        </Border>
-                                        <Border CornerRadius="3" Background="White" Margin="4" x:Name="CheckMark" Visibility="Collapsed">
-                                            <Border.Effect>
-                                                <BlurEffect Radius="2"/>
-                                            </Border.Effect>
-                                        </Border>
-                                    </Grid>
-                                </BulletDecorator.Bullet>
-                                <ContentPresenter Margin="5 0 0 0" VerticalAlignment="Center" Content="{TemplateBinding Content}"/>
-                            </BulletDecorator>
-                            <ControlTemplate.Triggers>
-                                <Trigger Property="IsChecked" Value="True">
-                                    <Setter TargetName="CheckMark" Property="Visibility" Value="Visible"/>
-                                </Trigger>
-                            </ControlTemplate.Triggers>
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Style.Setters>
-        </Style>
-    </Window.Resources>
-
+        Title="Auth" Height="450" Width="400" Background="#FF767474">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="129*"/>
-            <ColumnDefinition Width="167*"/>
-            <ColumnDefinition Width="298*"/>
-            <ColumnDefinition Width="178*"/>
-        </Grid.ColumnDefinitions>
-        <TextBlock Text="User Name:" Height="19" Margin="10,0,10,0" />
-        <TextBlock Grid.Row="1" Text="Password:" Height="19" Margin="10,0,10,0" />
-        <TextBox Grid.Column="1" Grid.ColumnSpan="3" Margin="5,5,5,5"/>
-        <TextBox Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="3" Margin="5,5,5,5" />
-        <Button Grid.Column="2" Grid.Row="3" Content="Log in" Style="{StaticResource btnLogIn}" Margin="30,21,118,20"/>
+        <Button Content="Войти" HorizontalAlignment="Center" Margin="0,313,0,0" VerticalAlignment="Top" Width="80" FontSize="24" Foreground="White" Background="#FF9E9E9E" BorderBrush="White" Click="Button_Click"/>
+        <TextBox x:Name="TextBox_login" HorizontalAlignment="Left" Margin="147,73,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="231" Height="32" Background="#FF9E9E9E" BorderBrush="White" Foreground="White" TextChanged="TextBox_TextChanged_1"/>
+        <TextBlock HorizontalAlignment="Left" Margin="33,73,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="24"><Run Language="ru-ru" Text="Логин"/></TextBlock>
+        <TextBlock HorizontalAlignment="Left" Margin="33,176,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="24"><Run Language="ru-ru" Text="Пароль"/></TextBlock>
+        <TextBox x:Name="TextBox_password" HorizontalAlignment="Left" Margin="147,176,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="231" Height="32" Background="#FF9E9E9E" BorderBrush="White" Foreground="White" TextChanged="TextBox_TextChanged_1"/>
+
     </Grid>
 </Window>
