--- a/Kurs1125/Auth.xaml
+++ b/Kurs1125/Auth.xaml
@@ -5,13 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Kurs1125"
         mc:Ignorable="d"
-        Title="Auth" Height="450" Width="400" Background="#FF767474">
+        Title="Auth" Height="450" Width="400" MaxHeight="450" MaxWidth="400" Background="#FF767474">
     <Grid>
         <Button Content="Войти" HorizontalAlignment="Center" Margin="0,313,0,0" VerticalAlignment="Top" Width="80" FontSize="24" Foreground="White" Background="#FF9E9E9E" BorderBrush="White" Click="Button_Click"/>
-        <TextBox x:Name="TextBox_login" HorizontalAlignment="Left" Margin="147,73,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="231" Height="32" Background="#FF9E9E9E" BorderBrush="White" Foreground="White" TextChanged="TextBox_TextChanged_1"/>
-        <TextBlock HorizontalAlignment="Left" Margin="33,73,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="24"><Run Language="ru-ru" Text="Логин"/></TextBlock>
-        <TextBlock HorizontalAlignment="Left" Margin="33,176,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="24"><Run Language="ru-ru" Text="Пароль"/></TextBlock>
-        <TextBox x:Name="TextBox_password" HorizontalAlignment="Left" Margin="147,176,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="231" Height="32" Background="#FF9E9E9E" BorderBrush="White" Foreground="White" TextChanged="TextBox_TextChanged_1"/>
+        <TextBox x:Name="TextBox_login" HorizontalAlignment="Left" Margin="119,73,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="231" Height="32" Background="#FF9E9E9E" BorderBrush="White" Foreground="White" FontSize="24"/>
+        <TextBlock HorizontalAlignment="Left" Margin="18,73,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="24"><Run Language="ru-ru" Text="Логин"/></TextBlock>
+        <TextBlock HorizontalAlignment="Left" Margin="18,176,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="24"><Run Language="ru-ru" Text="Пароль"/></TextBlock>
+        <TextBox x:Name="TextBox_password" HorizontalAlignment="Left" Margin="119,176,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="231" Height="32" Background="#FF9E9E9E" BorderBrush="White" Foreground="White" FontSize="24"/>
 
     </Grid>
 </Window>
