--- a/Kurs1125/pages/EditVoditel.xaml
+++ b/Kurs1125/pages/EditVoditel.xaml
@@ -25,15 +25,15 @@
                 </TransformGroup>
             </Line.RenderTransform>
         </Line>
-        <Button Content="Сохранить" Command="{Binding SavePrepods}" Background="#FFF1ED94" Margin="70,413,70,0" Grid.Row="1"/>
+        <Button Content="Сохранить" Command="{Binding SaveVoditel}" Background="#FFF1ED94" Margin="70,413,70,0" Grid.Row="1"/>
         <TextBlock Margin="0,20,332,396" Grid.Row="1" ><Run Language="ru-ru" Text="Фамилия"/></TextBlock>
         <TextBlock Margin="0,73,337,343" Grid.RowSpan="2" ><Run Language="ru-ru" Text="Отчество"/></TextBlock>
-        <TextBox Text="{Binding LName}" RenderTransformOrigin="-0.14,0.517" Height="20" Margin="57,20,230,395" Grid.Row="1"/>
-        <TextBox Text="{Binding LName}" RenderTransformOrigin="-0.14,0.517" Margin="58,45,230,371" Grid.Row="1"/>
-        <TextBox Text="{Binding LName}" RenderTransformOrigin="-0.14,0.517" Margin="58,73,230,343" Grid.Row="1"/>
-        <TextBox Text="{Binding LName}" RenderTransformOrigin="-0.14,0.517" Margin="262,22,42,395" Grid.Row="1"/>
+        <TextBox RenderTransformOrigin="-0.14,0.517" Height="20" Margin="57,20,230,395" Grid.Row="1"/>
+        <TextBox RenderTransformOrigin="-0.14,0.517" Margin="58,45,230,371" Grid.Row="1"/>
+        <TextBox RenderTransformOrigin="-0.14,0.517" Margin="58,73,230,343" Grid.Row="1"/>
+        <TextBox RenderTransformOrigin="-0.14,0.517" Margin="262,22,42,395" Grid.Row="1"/>
         <TextBlock Margin="170,22,128,396" Grid.RowSpan="2" ><Run Language="ru-ru" Text="Серия паспорта"/></TextBlock>
-        <TextBox Text="{Binding LName}" RenderTransformOrigin="-0.14,0.517" Height="20" Margin="262,45,42,370" Grid.RowSpan="2"/>
+        <TextBox RenderTransformOrigin="-0.14,0.517" Height="20" Margin="262,45,42,370" Grid.RowSpan="2"/>
         <TextBlock Margin="170,45,128,370" Grid.RowSpan="2" ><Run Language="ru-ru" Text="Номер паспорта"/></TextBlock>
         <TextBlock Margin="0,45,356,371" Grid.Row="1" ><Run Language="ru-ru" Text="Имя"/></TextBlock>
         <TextBlock Margin="0,106,302,310" Grid.RowSpan="2" ><Run Language="ru-ru" Text="Дата рождения"/></TextBlock>
@@ -42,10 +42,10 @@
         <TextBlock Margin="70,165,215,250" Grid.RowSpan="2" ><Run Language="ru-ru" Text="Цвет"/><Run Text=" автомобиля"/></TextBlock>
         <TextBlock Margin="70,190,255,225" Grid.RowSpan="2" ><Run Language="ru-ru" Text="ГОС номер"/></TextBlock>
         <TextBlock Margin="70,215,230,200" Grid.RowSpan="2" ><Run Language="ru-ru" Text="Смена водителя"/></TextBlock>
-        <TextBox Text="{Binding LName}" RenderTransformOrigin="-0.14,0.517" Margin="187,140,116,277" Grid.Row="1"/>
-        <TextBox Text="{Binding LName}" RenderTransformOrigin="-0.14,0.517" Margin="173,167,130,250" Grid.Row="1"/>
-        <TextBox Text="{Binding LName}" RenderTransformOrigin="-0.14,0.517" Margin="143,192,159,225" Grid.Row="1"/>
-        <TextBox Text="{Binding LName}" RenderTransformOrigin="-0.14,0.517" Margin="165,216,136,201" Grid.Row="1"/>
+        <TextBox RenderTransformOrigin="-0.14,0.517" Margin="187,140,116,277" Grid.Row="1"/>
+        <TextBox RenderTransformOrigin="-0.14,0.517" Margin="173,167,130,250" Grid.Row="1"/>
+        <TextBox RenderTransformOrigin="-0.14,0.517" Margin="143,192,159,225" Grid.Row="1"/>
+        <TextBox RenderTransformOrigin="-0.14,0.517" Margin="165,216,136,201" Grid.Row="1"/>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="auto"/>
