--- a/Kurs1125/pages/EditVoditel.xaml
+++ b/Kurs1125/pages/EditVoditel.xaml
@@ -31,21 +31,23 @@
         <TextBox RenderTransformOrigin="-0.14,0.517" Height="20" Margin="57,20,230,395" Grid.Row="1"/>
         <TextBox RenderTransformOrigin="-0.14,0.517" Margin="58,45,230,371" Grid.Row="1"/>
         <TextBox RenderTransformOrigin="-0.14,0.517" Margin="58,73,230,343" Grid.Row="1"/>
-        <TextBox RenderTransformOrigin="-0.14,0.517" Margin="262,22,42,395" Grid.Row="1"/>
+        <TextBox  RenderTransformOrigin="-0.14,0.517" Margin="262,22,28,395" Grid.Row="1"/>
         <TextBlock Margin="170,22,128,396" Grid.RowSpan="2" ><Run Language="ru-ru" Text="Серия паспорта"/></TextBlock>
-        <TextBox RenderTransformOrigin="-0.14,0.517" Height="20" Margin="262,45,42,370" Grid.RowSpan="2"/>
-        <TextBlock Margin="170,45,128,370" Grid.RowSpan="2" ><Run Language="ru-ru" Text="Номер паспорта"/></TextBlock>
+        <TextBox RenderTransformOrigin="-0.14,0.517" Height="20" Margin="262,45,28,370" Grid.RowSpan="2"/>
+        <TextBlock Margin="170,45,130,370" Grid.RowSpan="2" ><Run Language="ru-ru" Text="Номер паспорта"/></TextBlock>
         <TextBlock Margin="0,45,356,371" Grid.Row="1" ><Run Language="ru-ru" Text="Имя"/></TextBlock>
         <TextBlock Margin="0,106,302,310" Grid.RowSpan="2" ><Run Language="ru-ru" Text="Дата рождения"/></TextBlock>
-        <DatePicker SelectedDate="{Binding Birthday}" Margin="89,104,182,307" Grid.Row="1"/>
+        <DatePicker Margin="89,104,182,307" Grid.Row="1"/>
         <TextBlock Margin="70,140,215,275" Grid.RowSpan="2" ><Run Language="ru-ru" Text="Марка автомобиля"/></TextBlock>
         <TextBlock Margin="70,165,215,250" Grid.RowSpan="2" ><Run Language="ru-ru" Text="Цвет"/><Run Text=" автомобиля"/></TextBlock>
         <TextBlock Margin="70,190,255,225" Grid.RowSpan="2" ><Run Language="ru-ru" Text="ГОС номер"/></TextBlock>
         <TextBlock Margin="70,215,230,200" Grid.RowSpan="2" ><Run Language="ru-ru" Text="Смена водителя"/></TextBlock>
-        <TextBox RenderTransformOrigin="-0.14,0.517" Margin="187,140,116,277" Grid.Row="1"/>
+        <TextBox  RenderTransformOrigin="-0.14,0.517" Margin="187,140,116,277" Grid.Row="1"/>
         <TextBox RenderTransformOrigin="-0.14,0.517" Margin="173,167,130,250" Grid.Row="1"/>
-        <TextBox RenderTransformOrigin="-0.14,0.517" Margin="143,192,159,225" Grid.Row="1"/>
-        <TextBox RenderTransformOrigin="-0.14,0.517" Margin="165,216,136,201" Grid.Row="1"/>
+        <TextBox  RenderTransformOrigin="-0.14,0.517" Margin="143,192,159,225" Grid.Row="1"/>
+        <TextBox  RenderTransformOrigin="-0.14,0.517" Margin="165,216,136,201" Grid.Row="1"/>
+        <DatePicker Margin="262,71,28,340" Grid.Row="1"/>
+        <TextBlock Margin="173,73,143,342" Grid.RowSpan="2" ><Run Language="ru-ru" Text="Дата выдочи"/></TextBlock>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="auto"/>
